dark mode css fix and error message content changed

--- a/src/theme/custom.scss
+++ b/src/theme/custom.scss
@@ -74,7 +74,7 @@ ion-title {
     background: black;
   }
 
-  .content {
+  .message-css {
     color: var(--ion-text-color) !important;
   }
 }
